trial
Cell In[13], line 10
    """
    ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 94-95: truncated \UXXXXXXXX escape
